config/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 4
  serviceName: mysql-h
  selector:
      matchLabels:
        app: mysql
  template:
    metadata:
      labels: 
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
