config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations: 
    kubernets.io/ingress.class: "nginx"
spec:
  rules: 
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: goserver-service
            port: 
              number: 80
